[package]
name = "mc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memory_backend"]
memory_backend = ["dep:bincode", "dep:bytes", "dep:anyhow", "dep:thiserror"]
sled_backend = []

[dependencies]
anyhow = { version = "1.0.80", optional = true }
bincode = { version = "1.3.3", optional = true }
bytes = { version = "1.5.0", features = ["serde"], optional = true }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = { version = "1.0.57", optional = true }
